@@ -1,5 +1,7 @@
-Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
+Copyright (C) 2022-2023 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
 @%@~LICENSE:MIT~@%@
+
+saw_031622_1 - Get initial nodes by querying DNS for node.lank.im.
 
 saw_072422_1 - Add call to master.on_peered() in peer handler.
 
